2010-08-12 Chris Morley

	* src/ops/opisomorph.cpp: make more robust to errors like a missing
	file.
	
	* src/descriptor.cpp: allow descripor parameters to be in quotes.
	
	* src/formats/mdlformat.cpp: change the new -at option to -aT
	because	FastSearchFormat already uses -at.
	
	* src/ops/xout.cpp, src/GUI/OBGUI.cpp: change the name of the op
	xout to 0xout so that it is executed before other ops.
	
	* src/GUI/optswx.cpp(SetOptions): ignore entries with both
	checkbox and editboxes unless checked.

2010-08-12 Noel O'Boyle

	* src/stereo/perception.cpp: CisTransFrom3D was not able to handle
	deviations from ideal angles. Replaced existing method with one based
	on the signed distance to the plane through the double bond at right
	angles to the stereo unit.
	* src/math/vector3.cpp, vector3.h: Move body of Point2Plane into new
	function Point2PlaneSigned. Point2Plane now just returns
	fabs(Point2PlaneSigned).

2010-08-09 Chris Morley

	* src/formats/gaussformat.cpp:Comment out inconsistent use of
	OBMol::SetEnergy(double).
	
	The use of this needs to be agreed.
	
2010-08-10 Tim Vandermeersch

	* include/openbabel/rotor.h, src/rotor.cpp: Add method to fix bonds 
	and mark fix atoms as deprecated. Update documentation.

	* include/openbabel/conformersearch.h, src/conformersearch.cpp: Use
	OBAlign with symmetry and update documentation.

	* test/rotortest.cpp: Some OBRotor and OBRotorList unit tests.

2010-08-10  Noel O'Boyle

	* src/builder.cpp, include/openbabel/builder.h: Add a Set/Unset method
	for keeprings. This allows the user to keep the ring conformation from
	the input molecule (this only makes sense if it's a 3D structure to
	begin with). 

2010-08-09 Chris Morley

	* src/mcdlutil.cpp: fix to bug #3041650 (2D coordinates with
	disconnected molecules), provided by Sergei Trepalin.

2010-08-09  Noel O'Boyle

	* test/aligntest.cpp: Enable all parts of the alignment test
	* src/math/align.cpp, include/openbabel/math/align.h: Use Tim's work